Bug 60668 - FILESAVE: Libreoffice Writer 4.0 crashing on saving file
Summary: FILESAVE: Libreoffice Writer 4.0 crashing on saving file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: high critical
Assignee: Michael Stahl
URL:
Whiteboard: BSA bibisected40 target:4.1.0 target:...
Keywords: regression
: 60946 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-02-11 14:23 UTC by basex
Modified: 2015-12-22 01:31 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
File that creates the problem explained above. (140.50 KB, application/msword)
2013-02-11 14:23 UTC, basex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description basex 2013-02-11 14:23:42 UTC
Created attachment 74615 [details]
File that creates the problem explained above.

Problem description: 
Libreoffice Writer crashes every time it's trying to save a specific word document (eg: in attachment) in any other format.

Steps to reproduce:
1. Open the DOC file in Writer
2. Save in ODF
or
1. In the command line execute: soffice --headless --convert-to odf testfile.doc

Current behavior:
Crashing on every save.

Expected behavior:
Creating the file correctly

Same error on Windows 7 and OSX 10.8.2 on the same machine.


Operating System: Mac OS X
Version: 4.1.0.0.alpha0+ Master
Comment 1 Jorendc 2013-02-11 17:02:55 UTC
Thanks for reporting!

I can reproduce a crash using Linux Mint 14 x64 with LibreOffice 4.0.0.3 rc3 (=release). Therefore I mark platforms as 'all' (not Mac OSX only).
I'm now building my master build, so I can't provide any symbols/console output right now.

Kind regards,
Joren
Comment 2 Jorendc 2013-02-11 17:05:24 UTC
Following [1] I mark this bug as 'critical medium' because we don't know this affects many users.

[1] https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 3 Joel Madero 2013-02-11 17:17:51 UTC
Version 4.1.0.0.alpha0+ (Build ID: 80cbc04c2cbe25ebdfe2f22bb2e5ba62728e963)
Bodhi Linux

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
Regression:
Bisect -

 d8c4c14d7e6a2b769960e8576292131093dca343 is the first bad commit
commit d8c4c14d7e6a2b769960e8576292131093dca343
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 02:07:07 2012 +0000

    source-hash-51065497ea83e90764860784dc6e193faaf0d673
    
    commit 51065497ea83e90764860784dc6e193faaf0d673
    Author:     Arnaud Versini <arnaud.versini@gmail.com>
    AuthorDate: Sun Jul 22 15:29:05 2012 +0200
    Commit:     Arnaud Versini <arnaud.versini@gmail.com>
    CommitDate: Sun Jul 22 15:32:37 2012 +0200
    
        Cleanup memory managment and constructor in SpellChecker
    
        Change-Id: I086596bc54cada121f5eaaf8f4c0f12e836b3ac9

:100644 100644 f03c1fd314dd85555afb354df4e75c482eb11b37 7474e03461616af2e8053c7c9519b97b61499f70 M	ccache.log
:100644 100644 b841755083acf8975aab592e8f93cd1d88250baa 055c4b38594055152dbc8e8b10d414dbe9a0a0b1 M	commitmsg
:100644 100644 d21e49db904c6d8149d7b142b41d58da8fbeed1f feffae5cf8cef2b4cecf18c935edc6b6a6897709 M	dev-install.log
:100644 100644 4879546e6121fd60aff171c8330d4c8c907ae595 741a9c5350d16f76783e641965763c49e421c4e1 M	make.log
:040000 040000 479dae2f4a0e2bcddee8a997b0d22c22489924ab a0ff33f9850f2a2f50a01f1b88764dde81f047b7 M	opt




# bad: [5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a] source-hash-8450a99c744e9005f19173e4df35d65640bcf5c4
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9] source-hash-099198a4224778fe6e43f5dc13b5b9b1b4dc828c
git bisect good 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
# bad: [f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect bad f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a
# good: [5bf3b624cdeb593e55402f44c730209f12813961] source-hash-4b4ca8030285bd66526ff5bb2b6ea5a75a6c6bc7
git bisect good 5bf3b624cdeb593e55402f44c730209f12813961
# bad: [70771b69f427dcd3ace8caea819338f104b88c43] source-hash-83837d6514217c82ebe8d56dddf89fa34f4b5435
git bisect bad 70771b69f427dcd3ace8caea819338f104b88c43
# good: [517b06fcbaceee61aa0ce4cc51663cc835444966] source-hash-06f20d73da21342046a480a6b22af69901351328
git bisect good 517b06fcbaceee61aa0ce4cc51663cc835444966
# bad: [b115ac56c451edd4aaa6dd661cc457bbeb8f0c44] source-hash-50b4cbe94e200288d57a135bc9386012164bc726
git bisect bad b115ac56c451edd4aaa6dd661cc457bbeb8f0c44
# bad: [ee8cfd6d9650078a9eacebdc2d82c38a66aa764a] source-hash-22cf0759547aa1803f77dbd3ee91774600dadc6f
git bisect bad ee8cfd6d9650078a9eacebdc2d82c38a66aa764a
# bad: [d8c4c14d7e6a2b769960e8576292131093dca343] source-hash-51065497ea83e90764860784dc6e193faaf0d673
git bisect bad d8c4c14d7e6a2b769960e8576292131093dca343
Comment 4 Joel Madero 2013-02-11 17:18:38 UTC
@Michael - this one yours?
Comment 5 Linus Drumbler 2013-02-11 18:22:35 UTC
Somewhat REPRODUCIBLE on Trisquel 5.5 with Linux-Libre 3.0.0. LibreOffice crashes when I attempt to save as .odt. However, I am able to save the file in the .docx format, and that file can be saved as odt.
Comment 6 Jorendc 2013-02-11 18:43:10 UTC
Some interesting terminal output:

warn:sfx2.dialog:22393:1:sfx2/source/dialog/filtergrouping.cxx:361: already have an element for WordPerfect
warn:sfx2.dialog:22393:1:sfx2/source/dialog/filtergrouping.cxx:361: already have an element for writerweb8_writer_template
warn:sfx2.dialog:22393:1:sfx2/source/dialog/filtergrouping.cxx:361: already have an element for writerglobal8
warn:legacy.osl:22393:1:sw/source/filter/ww8/wrtw8nds.cxx:1831: Looks like this doc is broken...; where is the Fieldmark for the FIELDSTART??
warn:legacy.osl:22393:1:sw/source/filter/ww8/wrtw8nds.cxx:130: where is my fieldmark???
warn:legacy.osl:22393:1:sw/source/filter/ww8/wrtw8nds.cxx:108: where is my fieldmark???
warn:legacy.osl:22393:1:sw/source/filter/ww8/wrtw8nds.cxx:130: where is my fieldmark???
warn:legacy.osl:22393:1:sw/source/filter/ww8/wrtw8nds.cxx:1888: Looks like this doc is broken...; where is the Fieldmark for the FIELDEND??
warn:legacy.osl:22393:1:sw/source/filter/ww8/wrtw8nds.cxx:130: where is my fieldmark???
Comment 7 Michael Stahl 2013-02-12 18:56:59 UTC
crash is regression because older versions did have the code
in ODF export that was added in 672ca6077ff9f65f29e0d7521149595f4eaf7a63

but the problem is really the Index update, which does not
eliminate the CH_TXT_ATR_FIELDSTART etc. characters, so we get
an index entry paragraph with these dummy chars, and of course
there's no actual FieldMark/Bookmark at that position then.
Comment 8 Not Assigned 2013-02-12 19:00:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e31807c83009655c342c929a118f0d28a8f63ddc

fdo#60668: filter out fieldmark chars from Index entries:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Jorendc 2013-02-12 19:04:34 UTC
I can confirm this is fixed using LibreOffice Version 4.1.0.0.alpha0+ (Build ID: cbc722733bb272b0f26efec09b478bed9a3cdb9). Therefore I mark it as VERIFIED FIXED. Thanks Michael for such a quick fix!
Comment 10 Not Assigned 2013-02-13 08:42:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aa3c9716c2492447e7dc3daa3592efbf52e8f186&h=libreoffice-4-0

fdo#60668: filter out fieldmark chars from Index entries:


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2013-02-13 10:23:31 UTC
argh i hate bugzilla
Comment 12 Not Assigned 2013-02-14 08:58:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1c6f5a16d83a87d7f2233e5c7e60ab5f39546225&h=libreoffice-3-6

fdo#60668: filter out fieldmark chars from Index entries:


It will be available in LibreOffice 3.6.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2013-02-21 19:11:24 UTC
*** Bug 60946 has been marked as a duplicate of this bug. ***
Comment 14 Theo 2013-02-21 19:23:26 UTC
I've got the problem in two ways

1: when I added comments to a document for a longer time there is a point, that I can't save the document without crashing LO 4.0. adding more than 6 comments without saving. Data is lost. Document can be opened again.

2: I added on another day many comments and was able to safe the document and reopen, but when I saved it with a new name, LO 4.0. is not able to open it anymore without crashing.
I can open the same Document with LO 3.6., but when I try this, I got this message of LO 3.6:

"Das Dokument 'BlahBlah.odt' ist durch Sie seit 20.02.2013 22:48 auf einem anderen System zum Bearbeiten gesperrt.
Öffnen Sie das Dokument schreibgeschützt oder ignorieren Sie die Bearbeitungssperre, um das Dokument zum Bearbeiten zu öffnen."

I tried to start LO4.0 from the console so I got following:
"terminate called after throwing an instance of com::sun::star::beans::UnknownPropertyException'"

I use Ubuntu 12, Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89), 32-Bit 

please fix the bug, I like the new function for comments
Comment 15 Michael Stahl 2013-02-21 19:31:05 UTC
Theo, please test if 4.0.1 RC1 fixes your problem
http://dev-builds.libreoffice.org/pre-releases/

(and if it does not then the other bug is not a duplicate
of this one, so re-open the other bug in that case).
Comment 16 Theo 2013-02-22 15:12:05 UTC
hi,
seems to be better wit this version. was able to reopen the document LO4.0.0.1 failed. an set comments as much I liked. Hope it will be forever!
thx
Comment 17 Robinson Tryon (qubit) 2015-12-22 01:31:23 UTC Comment hidden (obsolete)