fdo#60668: filter out fieldmark chars from Index entries:

SwTxtNode::GetExpandTxt must filter out all dummy characters used to
represent fields, footnotes, field marks, etc.

(cherry picked from commit e31807c83009655c342c929a118f0d28a8f63ddc)

Conflicts:
	sw/source/core/txtnode/ndtxt.cxx

Change-Id: Ie5ae2a82da9a6618bb451efabfd38769c495cc93
Reviewed-on: https://gerrit.libreoffice.org/2134
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>